RESOLVED FIXED184841
Activate NetworkLoadChecker for media loads
https://bugs.webkit.org/show_bug.cgi?id=184841
Summary Activate NetworkLoadChecker for media loads
youenn fablet
Reported 2018-04-20 14:49:01 PDT
Activate NetworkLoadChecker for media loads
Attachments
Patch (6.72 KB, patch)
2018-04-20 15:06 PDT, youenn fablet
no flags
Patch (11.49 KB, patch)
2018-04-20 15:55 PDT, youenn fablet
no flags
Patch (11.83 KB, patch)
2018-04-20 16:18 PDT, youenn fablet
no flags
Patch for landing (11.79 KB, patch)
2018-04-21 12:51 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2018-04-20 15:06:05 PDT
youenn fablet
Comment 2 2018-04-20 15:55:02 PDT
youenn fablet
Comment 3 2018-04-20 16:18:01 PDT
Eric Carlson
Comment 4 2018-04-20 20:51:29 PDT
Comment on attachment 338484 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=338484&action=review > Source/WebKit/Shared/WebCoreArgumentCoders.cpp:1274 > + if (resourceError.isNull()) > + return; Nit: is it worth adding an ASSERT(resourceError.type() == ResourceError::Type::Null) when resourceError.isNull()?
youenn fablet
Comment 5 2018-04-21 12:49:37 PDT
Comment on attachment 338484 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=338484&action=review >> Source/WebKit/Shared/WebCoreArgumentCoders.cpp:1274 >> + return; > > Nit: is it worth adding an ASSERT(resourceError.type() == ResourceError::Type::Null) when resourceError.isNull()? Will change to check for type() instead, thanks for the review.
youenn fablet
Comment 6 2018-04-21 12:51:08 PDT
Created attachment 338531 [details] Patch for landing
WebKit Commit Bot
Comment 7 2018-04-21 13:46:50 PDT
Comment on attachment 338531 [details] Patch for landing Clearing flags on attachment: 338531 Committed r230893: <https://trac.webkit.org/changeset/230893>
WebKit Commit Bot
Comment 8 2018-04-21 13:46:52 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9 2018-04-21 13:47:22 PDT
Note You need to log in before you can comment on or make changes to this bug.