Source/WebKit/Shared/soup/WebCoreArgumentCodersSoup.cpp
@@ -101,10 +101,6 @@ bool ArgumentCoder<CertificateInfo>::decode(Decoder& decoder, CertificateInfo& c
 
 void ArgumentCoder<ResourceError>::encodePlatformData(Encoder& encoder, const ResourceError& resourceError)
 {
-    encoder.encodeEnum(resourceError.type());
-    if (resourceError.isNull())
-        return;
-
     encoder << resourceError.domain();
     encoder << resourceError.errorCode();
     encoder << resourceError.failingURL().string();
@@ -115,14 +111,6 @@ void ArgumentCoder<ResourceError>::encodePlatformData(Encoder& encoder, const Re
 
 bool ArgumentCoder<ResourceError>::decodePlatformData(Decoder& decoder, ResourceError& resourceError)
 {
-    ResourceErrorBase::Type errorType;
-    if (!decoder.decodeEnum(errorType))
-        return false;
-    if (errorType == ResourceErrorBase::Type::Null) {
-        resourceError = { };
-        return true;
-    }
-
     String domain;
     if (!decoder.decode(domain))
         return false;
@@ -140,7 +128,6 @@ bool ArgumentCoder<ResourceError>::decodePlatformData(Decoder& decoder, Resource
         return false;
 
     resourceError = ResourceError(domain, errorCode, URL(URL(), failingURL), localizedDescription);
-    resourceError.setType(errorType);
 
     CertificateInfo certificateInfo;
     if (!decoder.decode(certificateInfo))
